--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
         <button id="searchButton" class="btn btn-primary mb-4">Buscar</button>
         <div id="lyrics" class="p-3 border rounded bg-light lyrics-container"></div>
+        <div id="suggestions" class="mt-4"></div>
     </div>
 
     <script src="app.js"></script>
