--- a/index.html
+++ b/index.html
@@ -17,16 +17,11 @@
         <div class="mb-3">
             <input type="text" id="searchInput" class="form-control" placeholder="Artista o Canción">
         </div>
-        <div id="autocompleteSuggestions" class="list-group"></div>
-        <button id="searchButton" class="btn btn-primary mb-4">Buscar</button>
-        <div id="lyrics" class="p-3 border rounded bg-light lyrics-container"></div>
-        <div id="suggestions" class="mt-4"></div>
+        <div id="autocompleteSuggestions" class="list-group mb-3"></div>
+        <div id="lyricsDisplay" class="lyrics-container mb-3"></div>
+        <div id="lyricsOptions" class="mb-3"></div>
     </div>
-    <footer class="text-center mt-5 py-3 text-muted">
-        <small>&copy; José Villamayor 2024</small>
-    </footer>
+
     <script src="app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 </body>
 </html>
