--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
     <title>Buscador de letras</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
+    
         .lyrics-container {
             white-space: pre-wrap; /* Mantiene los saltos de línea */
+            background-color: #f8f9fa; /* Fondo claro */
+            padding: 20px; /* Espaciado interno */
+            border-radius: 8px; /* Bordes redondeados */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
+            font-family: 'Courier New', Courier, monospace; /* Fuente monoespaciada */
+            font-size: 1.1em; /* Tamaño de fuente */
         }
     </style>
 </head>
-<body>
-    <div class="container">
+<body class="bg-light">
+    <div class="container text-center">
         <h1 class="my-4">Buscador de letras</h1>
         <div class="mb-3">
             <input type="text" id="searchInput" class="form-control" placeholder="Artista o Canción">
@@ -23,5 +30,6 @@
     </div>
 
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
