--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <div id="lyricsDisplay" class="lyrics-container mb-3"></div>
         <div id="lyricsOptions" class="mb-3"></div>
     </div>
-
+    <footer class="text-center mt-5 py-3 text-muted">
+        <small>&copy; José Villamayor 2024</small>
+    </footer>
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
