--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
     
-        .lyrics-container {
+    .lyrics-container {
             white-space: pre-wrap; /* Mantiene los saltos de línea */
             background-color: #f8f9fa; /* Fondo claro */
             padding: 20px; /* Espaciado interno */
             border-radius: 8px; /* Bordes redondeados */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
-            font-family: 'Courier New', Courier, monospace; /* Fuente monoespaciada */
-            font-size: 1.1em; /* Tamaño de fuente */
+            font-family: 'Arial', sans-serif; /* Fuente más moderna y legible */
+            font-size: 1.5em; /* Tamaño de fuente más grande */
+            color: #212529; /* Texto más oscuro */
         }
     </style>
 </head>
